# snuffles

./: .gitignore  README.md  pyproject.toml
examples/: 01_single_agent.py  02_proactive.py  03_two_agents.py  04_delegation.py
snuffles/: __init__.py  agent.py  bus.py  llm.py  log.py  loop.py  message.py  orchestrator.py  trigger.py
tests/: test_snuffles.py
